log
Sat 09 Sep 2023 01:32:44 AM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  4|5
total_score: 20/70
ac4576c
Sat 09 Sep 2023 01:38:21 AM UTC: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  1|6
total_score: 10/70
235537b
Sat 09 Sep 2023 02:05:39 AM UTC: 
 hashmap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|5
total_score: 20/70
8b3217b
Sat 09 Sep 2023 02:10:20 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|5
total_score: 20/70
42fe90f
Sat 09 Sep 2023 02:40:35 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|5
total_score: 20/70
5c29005
Sat 09 Sep 2023 03:08:00 AM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:65:12: error: unused variable ‘old_buckets’ [-Werror=unused-variable]
   65 |     Pair **old_buckets = map->buckets;
      |            ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4eec0a4
Sat 09 Sep 2023 03:08:22 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
13c5365
Sat 09 Sep 2023 03:13:13 AM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  5|4
total_score: 30/70
7f1a554
Sat 09 Sep 2023 03:14:18 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:85:12: error: ‘MAP’ undeclared (first use in this function)
   85 |     return MAP;
      |            ^~~
hashmap.c:85:12: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
   86 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2431aa1
Sat 09 Sep 2023 03:14:57 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
8653a67
Sat 09 Sep 2023 03:50:33 AM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:89:61: error: expected ‘;’ before ‘mao’
   89 |     map->buckets = (Pair **)malloc(sizeof(Pair *) *capacity)
      |                                                             ^
      |                                                             ;
......
   92 |     mao->size = 0;
      |     ~~~                                                      
hashmap.c:96:15: error: expected ‘;’ before ‘}’ token
   96 |     return map
      |               ^
      |               ;
   97 | }
      | ~              
Compilation failed
6b2a3a4
Sat 09 Sep 2023 03:50:55 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:92:5: error: ‘mao’ undeclared (first use in this function); did you mean ‘map’?
   92 |     mao->size = 0;
      |     ^~~
      |     map
hashmap.c:92:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ad99a92
Sat 09 Sep 2023 03:51:14 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
0c9cb48
Sat 09 Sep 2023 03:55:07 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
3d8587d
Sat 09 Sep 2023 04:22:43 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
1ad398e
Sat 09 Sep 2023 05:45:35 AM UTC: 
 hashmap.c | 47 +++++++++++++++++++++++++++--------------------
 1 file changed, 27 insertions(+), 20 deletions(-)
 tests:  9|2
total_score: 50/70
c27143a
Sat 09 Sep 2023 06:11:35 AM UTC: 
 hashmap.c | 24 ++++++++++++++++++------
 1 file changed, 18 insertions(+), 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:102:44: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  102 |     if (map == NULL || key == NULL) return NULL;
      |                                            ^~~~
hashmap.c:99:6: note: declared here
   99 | void eraseMap(HashMap *map, char *key) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a95e18b
Sat 09 Sep 2023 06:13:12 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|1
total_score: 60/70
3930f90
Sat 09 Sep 2023 06:38:14 AM UTC: 
 hashmap.c | 19 ++++++++++++++++---
 1 file changed, 16 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:125:14: error: operation on ‘position’ may be undefined [-Werror=sequence-point]
  125 |     position = (position ++) % map->capacity;
      |     ~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
71a8fbd
Sat 09 Sep 2023 06:38:29 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|1
total_score: 60/70
d915d36
Sat 09 Sep 2023 06:47:39 AM UTC: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  12|1
total_score: 60/70
7a7e66f
Sat 09 Sep 2023 06:49:02 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|1
total_score: 60/70
3559c5c
Sat 09 Sep 2023 06:57:26 AM UTC: 
 hashmap.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:132:9: error: ‘mao’ undeclared (first use in this function); did you mean ‘map’?
  132 |     if (mao->buckets[i] != NULL && map->buckets[i]->key != NULL){
      |         ^~~
      |         map
hashmap.c:132:9: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:132:22: error: ‘i’ undeclared (first use in this function)
  132 |     if (mao->buckets[i] != NULL && map->buckets[i]->key != NULL){
      |                      ^
Compilation failed
a071c29
Sat 09 Sep 2023 06:58:07 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|1
total_score: 60/70
6f7a8e8
